<resources>
    <string name="common_save_failure_text">저장하지 못했어요</string>
    <string name="common_save_success_text">저장했어요!</string>
    <string name="common_fetch_failure_text">정보를 불러오지 못했어요</string>
    <string name="common_permission_failure_text">권한 요청에 실패했어요</string>
    <string name="common_format_quantity_status">%d개 중 %d개</string>
    <string name="common_format_date_alarm">M월 d일</string>
    <string name="common_format_time_alarm">HH:mm</string>
    <string name="common_format_template_items">\u00A0외 %d개</string>
    <string name="common_format_checklist_swipe_status">%d개 중 %d개 남았어요!</string>
    <string name="common_item_title_prefix_format">•\u00A0\u00A0%s</string>
    <string name="common_separator_text">\u00A0|\u00A0</string>
    <string name="common_confirm_btn_text">확인</string>
    <string name="common_save_btn_text">저장</string>
    <string name="common_cancel_btn_text">취소</string>
    <string name="common_yes_btn_text">예</string>
    <string name="common_no_btn_text">아니오</string>
    <string name="common_previous_btn_description">뒤로가기 버튼</string>
    <string name="common_setting_btn_description">설정 버튼</string>
    <string name="common_close_btn_description">닫기 버튼</string>
    <string name="common_option_btn_description">옵션 버튼</string>
    <string name="common_permission_notice_dialog_title_text">보따리를 편하게 챙기려면\n다음과 같은 권한이 필요해요</string>
    <string name="common_notification_permission_text">알림 (선택)</string>
    <string name="common_alarm_permission_text">알람 및 리마인더 (선택)</string>
    <string name="common_notification_permission_description_text">보따리 관련 알림 수신</string>
    <string name="common_alarm_permission_description_text">설정한 날짜 및 시간에 알람 생성</string>
    <string name="common_permission_description_text">권한 접근을 허용하지 않아도 보따리를 챙길 수 있어요.\n하지만 알림 등 일부 기능이 제한될 수 있어요.</string>
    <string name="common_permission_check_btn_text">확인했어요</string>
    <string name="common_permission_dialog_title_text">권한 안내</string>
    <string name="common_notification_permission_dialog_message_text">알림을 받으려면 권한이 필요해요.\n설정 화면으로 이동할까요?</string>
    <string name="common_alarm_permission_dialog_message_text">알람을 설정하려면 알람 및 리마인더 권한이 필요해요.\n설정 화면으로 이동할까요?</string>
    <string name="common_permission_dialog_positive_btn_text">설정으로 가기</string>
    <string name="common_permission_dialog_negative_btn_text">나중에 하기</string>
    <string name="common_permission_denied_text">권한이 거부되어 일부 기능이 제한돼요.\n기능 사용 시 다시 요청드릴게요.</string>
    <string name="common_alert_dialog_title_text">저장 알림</string>
    <string name="common_alert_unsaved_dialog_message_text">저장하지 않고 나가시겠어요?</string>
    <string name="common_report_dialog_title_text">신고 내용 확인</string>
    <string name="common_report_dialog_report_button_text">신고하기</string>
    <string name="common_report_dialog_description_text">신고 사유를 선택해 주세요</string>
    <string name="common_report_dialog_spam_or_ad_radio_button_text">스팸 또는 광고</string>
    <string name="common_report_dialog_inappropriate_content_radio_button_text">부적절한 콘텐츠</string>
    <string name="common_report_dialog_false_information_radio_button_text">허위 정보</string>
    <string name="common_report_dialog_privacy_exposure_radio_button_text">개인정보 노출</string>
    <string name="common_report_dialog_submit_success_text">신고가 정상적으로 접수되었어요</string>
    <string name="common_report_dialog_submit_failure_text">신고 접수에 실패했어요</string>
    <string name="reset_bottari_items_check_state_dialog_title_text">체크리스트 초기화</string>
    <string name="reset_bottari_items_check_state_dialog_description_text">체크 상태를 모두 지우시겠어요?</string>
    <string name="bottari_create_dialog_title_text">보따리 이름을 입력해 주세요</string>
    <string name="bottari_create_dialog_description_text">이름은 나중에 언제든지 바꿀 수 있어요</string>
    <string name="bottari_create_dialog_name_hint_text">보따리 이름을 입력해 주세요</string>
    <string name="bottari_create_dialog_btn_text">보따리 만들기</string>
    <string name="bottari_create_failure_text">보따리를 만들지 못했어요</string>
    <string name="bottari_create_default_title_text">새 보따리</string>
    <string name="bottari_create_success_text">보따리를 만들었어요</string>
    <string name="team_bottari_join_dialog_title_text">초대 코드를 입력해 주세요</string>
    <string name="team_bottari_join_dialog_description_text">초대 코드를 입력하고 팀에 참여하세요</string>
    <string name="team_bottari_join_invalid_invite_code_text">유효하지 않은 초대 코드예요</string>
    <string name="team_bottari_join_dialog_name_hint_text">초대 코드를 입력해 주세요</string>
    <string name="team_bottari_join_dialog_btn_text">참가하기</string>
    <string name="force_update_dialog_title_text">업데이트가 필요해요</string>
    <string name="force_update_dialog_description_text">원활한 서비스 이용을 위해\n최신 버전으로 업데이트해 주세요</string>
    <string name="force_update_dialog_update_btn_text">업데이트하기</string>
    <string name="force_update_dialog_close_btn_text">앱 종료</string>
    <string name="notification_personal_bottari_channel_name">나의 보따리 알림</string>
    <string name="notification_team_bottari_channel_name">우리 보따리 알림</string>
    <string name="notification_bottari_title_format">%s 챙길 시간이에요!</string>
    <string name="notification_bottari_remind_message">보따리를 열어보고 준비 완료했는지 확인해보세요!</string>
    <string name="notification_team_bottari_item_changed_message">챙겨야 할 물건이 변경되었어요.</string>
    <string name="notification_remind_by_member_message">아직 챙기지 않은 물건이 있어요.</string>
    <string name="notification_team_bottari_remind_by_item_message">%s 챙겨 주세요.</string>
    <string name="notification_team_bottari_notification_exit_message">%s님이 %s에서 나갔어요.</string>
    <string name="home_nav_personal_bottari_title_text">나의 보따리</string>
    <string name="home_nav_my_bottari_title_text">나의 보따리</string>
    <string name="home_nav_template_title_text">모두의 보따리</string>
    <string name="home_nav_more_title_text">더보기</string>
    <string name="team_bottari_text">팀</string>
    <string name="personal_bottari_text">개인</string>
    <string name="all_bottari_text">전체</string>
    <string name="bottari_home_fetch_failure_text">보따리 목록을 불러오지 못했어요</string>
    <string name="bottari_home_fetch_bottari_failure_text">보따리를 불러오지 못했어요</string>
    <string name="bottari_home_delete_success_text">보따리를 삭제했어요</string>
    <string name="bottari_home_delete_failure_text">보따리를 삭제하지 못했어요</string>
    <string name="bottari_home_empty_view_title_text">보따리가 없습니다</string>
    <string name="bottari_home_empty_view_description_text">오른쪽 아래 버튼을 눌러 새 보따리를 만들거나,\n‘모두의 보따리’에서 원하는 보따리를 가져와보세요!</string>
    <string name="bottari_home_exit_confirm_text">한 번 더 누르면 앱이 종료돼요</string>
    <string name="team_checklist_tap_checklist_text">체크리스트</string>
    <string name="team_checklist_tap_team_current_text">물건 현황</string>
    <string name="team_checklist_tap_member_checklist_text">멤버 현황</string>
    <string name="team_checklist_empty_view_title_text">이곳은 아직 비어있어요.</string>
    <string name="team_checklist_current_items_status_percent_title">전체 완료율</string>
    <string name="team_checklist_current_items_status_percent_text">%1$d%%</string>
    <string name="team_checklist_current_items_status_count_title">완료 항목</string>
    <string name="team_checklist_current_items_status_progress_text">%d/%d</string>
    <string name="team_checklist_current_items_count_text">%d개 항목</string>
    <string name="team_checklist_current_item_status_percent_text">%1$d%% 완료</string>
    <string name="personal_bottari_create_btn_text">개인 보따리 생성</string>
    <string name="team_bottari_create_btn_text">팀 보따리 생성</string>
    <string name="team_bottari_join_btn_text">코드로 참가</string>
    <string name="join_team_bottari_success_text">팀 보따리에 참가했어요</string>
    <string name="join_team_bottari_failure_text">팀 보따리에 참가하지 못했어요</string>
    <string name="exit_team_bottari_success_text">팀 보따리에서 나갔어요</string>
    <string name="exit_team_bottari_failure_text">팀 보따리에서 나가지 못했어요</string>
    <string name="bottari_item_alarm_repeat_everyday_text">매일 알람</string>
    <string name="bottari_item_alarm_repeat_everyweek_text">매주 알람</string>
    <string name="bottari_item_status_format">%d/%d</string>
    <string name="setting_toolbar_title_text">설정</string>
    <string name="setting_privacy_policy_title_text">개인정보 처리 방침</string>
    <string name="setting_user_feedback_title_text">의견 보내기</string>
    <string name="setting_version_text">보따리 버전</string>
    <string name="setting_unknown_version_text">알 수 없음</string>
    <string name="checklist_progress_header_title_text">완료된 항목</string>
    <string name="checklist_tooltip_title_text">개인 보따리</string>
    <string name="checklist_tooltip_description_text">오른쪽 상단 버튼을 통해,\n스와이프 화면으로 이동할 수 있어요.</string>
    <string name="checklist_current_status_items_count_text">%d / %d</string>
    <string name="checklist_fetch_failure_text">체크리스트를 불러오지 못했어요</string>
    <string name="checklist_reset_failure_text">체크리스트를 초기화하지 못했어요</string>
    <string name="checklist_check_failure_text">체크에 실패했어요</string>
    <string name="checklist_empty_view_edit_btn_text">편집하기</string>
    <string name="checklist_empty_view_title_text">챙길 물건이 보이지 않아요</string>
    <string name="checklist_empty_view_description_text">지금 \'편집하기\'를 눌러서\n보따리에 물건을 넣어보세요</string>
    <string name="checklist_swipe_title_text">체크리스트</string>
    <string name="checklist_swipe_sub_title_text">챙기셨나요?</string>
    <string name="checklist_swipe_description_text">좌우로 스와이프하거나 아래 버튼을 눌러주세요</string>
    <string name="checklist_swipe_not_btn_text">아직이에요</string>
    <string name="checklist_swipe_yes_btn_text">챙겼어요</string>
    <string name="checklist_swipe_yes_overlay_view_text">챙겼어요!</string>
    <string name="checklist_swipe_no_overlay_view_text">아직이에요</string>
    <string name="checklist_swipe_complete_title">보따리를 모두 점검했어요!</string>
    <string name="checklist_swipe_complete_all_text">모든 준비 완료! 출발만 남았어요!</string>
    <string name="checklist_swipe_complete_not_all_text">아직 챙기지 않은 물건이 있어요. 마저 챙겨볼까요?</string>
    <string name="checklist_swipe_return_btn_text">돌아가기</string>
    <string name="checklist_swipe_empty_view_description_text">보따리를 편집해서 물건을 챙겨보아요!</string>
    <string name="bottari_edit_item_list_title">내 물건</string>
    <string name="bottari_edit_add_item_title">물건 추가하기</string>
    <string name="bottari_edit_add_item_description_text">보따리에 물건을 추가하려면 눌러주세요</string>
    <string name="bottari_edit_alarm_list_title">알람 목록</string>
    <string name="bottari_edit_add_alarm_title">알람 추가하기</string>
    <string name="bottari_edit_alarm_description_text">알람을 수정하려면 눌러주세요</string>
    <string name="bottari_edit_fetch_failure_text">보따리를 불러오지 못했어요</string>
    <string name="bottari_edit_create_template_success_text">모두의 보따리에 등록했어요</string>
    <string name="bottari_edit_create_template_failure_text">모두의 보따리에 등록하지 못했어요</string>
    <string name="bottari_edit_toggle_alarm_state_failure_text">알람 상태를 변경하지 못했어요</string>
    <string name="bottari_edit_item_text">물건 편집</string>
    <string name="bottari_edit_alarm_text">알람 설정</string>
    <string name="bottari_edit_personal_items_title_text">개인 물건</string>
    <string name="bottari_edit_assigned_items_title_text">담당 물건</string>
    <string name="bottari_edit_shared_items_title_text">공통 물건</string>
    <string name="bottari_personal_item_edit_confirm_btn_text">추가하기</string>
    <string name="bottari_personal_item_edit_hint_text">추가할 물건을 입력해 주세요</string>
    <string name="bottari_personal_item_empty_view_title">보따리 안에 물건이 없어요</string>
    <string name="bottari_personal_item_fetch_failure_text">물건을 불러오지 못했어요</string>
    <string name="bottari_personal_item_delete_failure_text">물건을 삭제하지 못했어요</string>
    <string name="bottari_personal_item_empty_view_text">무엇을 챙겨야 할지 모르겠다면,\n‘모두의 보따리’를 살펴보세요! </string>
    <string name="bottari_rename_dialog_title_text">보따리 이름 바꾸기</string>
    <string name="bottari_rename_dialog_btn_text">이름 저장</string>
    <string name="bottari_rename_dialog_hint_text">새 이름을 입력해 주세요</string>
    <string name="template_search_hint_text">찾고 싶은 보따리를 입력해 보세요</string>
    <string name="template_my_template_btn_text"><![CDATA[내 보따리 보기 >]]></string>
    <string name="template_create_btn_text">보따리 등록하기</string>
</resources>