<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_bottari_template_title"
        style="@style/Pretendard_Regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_large"
        android:background="@drawable/bg_gray_radius_20dp"
        android:hint="@string/template_search_hint_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingVertical="@dimen/space_median"
        android:paddingStart="@dimen/space_small"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_a6a6a6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_my_bottari_template"
        style="@style/Pretendard_Medium_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/template_my_template_btn_text"
        android:textColor="@color/gray_787878"
        app:layout_constraintEnd_toEndOf="@id/et_bottari_template_title"
        app:layout_constraintTop_toBottomOf="@id/et_bottari_template_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bottari_template"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_small"
        android:fadingEdgeLength="@dimen/space_x_small"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_my_bottari_template" />

    <TextView
        android:id="@+id/btn_template_create"
        style="@style/Pretendard_SemiBold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_median"
        android:background="@drawable/bg_primary_radius_16dp"
        android:elevation="2dp"
        android:padding="@dimen/space_median"
        android:text="@string/template_create_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
